--- a/views/catForm.erb
+++ b/views/catForm.erb
@@ -1,13 +1,5 @@
-
-<div style="border: medium dashed red">
-  <img src="http://bit.ly/1eze8aE" border-style:dotted>
-</div>
-<% if @name %>
-<h1>My name is <%= @name %></h1>
-<% end %>
-
 <%=
-'<form action="/named-cat">
+'<form action="/named-cat" method="post">
   <div>
     <label for="name">Name:</label>
     <input type="text" name="name">
